--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    //    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     //    compile 'com.android.support:multidex:1.0.3'
     //    compile 'com.github.bumptech.glide:glide:3.7.0'
     // 添加依赖。注意，版本号必须一致。
