--- a/session/build.gradle
+++ b/session/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     //api 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1' // if you want to use the Glide GPU Filters
     compile 'com.android.support:support-annotations:26.0.2'
-    compile project(':baselib')
+    compile project(':base')
 
     compile 'com.alibaba:fastjson:1.1.34'
 }
