--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.international.shopping"
         minSdkVersion 23
@@ -75,4 +75,6 @@ dependencies {
     compile project(path: ':session')
     compile project(':third')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    implementation 'com.youth.banner:banner:1.4.10'
 }
