--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,11 +49,11 @@
         <activity
             android:name=".view.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
-
+            android:theme="@style/MainActivityAppTheme"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".view.activity.SettingActivity" />
         <activity android:name=".base.BaseActivity" />
-        <activity android:name=".view.activity.AboutUsActivity"/>
+        <activity android:name=".view.activity.AboutUsActivity" />
 
         <!-- 微信 -->
         <activity
@@ -61,6 +61,9 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity android:name=".view.activity.SearchActivity"
+            android:theme="@style/SearchActivityTheme"/>
     </application>
 
 </manifest>
