--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,19 @@
 buildscript {
     
     repositories {
-//        google()
+        google()
         jcenter()
+//        maven {
+//            url 'https://maven.google.com/'
+//        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
 //        classpath 'com.novoda:bintray-release:0.4.0'
 //        classpath 'com.novoda:bintray-release:0.4.0'
+
+        classpath 'com.novoda:bintray-release:0.5.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,12 +24,12 @@ buildscript {
 
 allprojects {
     repositories {
-//        google()
+        google()
         jcenter()
 //        mavenCentral()
-        maven {
-            url "https://maven.google.com"
-        }
+//        maven {
+//            url "https://maven.google.com"
+//        }
     }
 }
 
