--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 2
-        versionName "1.0.5"
+        versionName "1.1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -71,10 +71,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(path: ':session')
-    compile project(':third')
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    implementation 'com.google.android.gms:play-services-plus:15.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation project(':session')
+    implementation project(':third')
 }
