--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,9 +61,9 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
-        <activity android:name=".view.activity.SearchActivity"
-            android:theme="@style/SearchActivityTheme"/>
+        <activity
+            android:name=".view.activity.SearchActivity"
+            android:theme="@style/SearchActivityTheme" />
     </application>
 
 </manifest>
