--- a/third/build.gradle
+++ b/third/build.gradle
@@ -4,15 +4,15 @@ android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
 
-    defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
+//    defaultConfig {
+//        minSdkVersion 19
+//        targetSdkVersion 27
+//        versionCode 1
+//        versionName "1.0"
+//
+//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//
+//    }
     buildTypes {
         release {
             manifestPlaceholders = [qqappid: "1106084810"]
@@ -40,14 +40,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.umeng.sdk:share-core:latest.integration'
-    compile 'com.umeng.sdk:share-qq:latest.integration'
-    compile 'com.umeng.sdk:share-wechat:latest.integration'
-    compile 'com.umeng.sdk:share-sina:latest.integration'
-    compile project(':base')
-    compile files('libs/umeng-share-QQ-simplify-6.9.0.jar')
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    api 'com.umeng.sdk:share-core:latest.integration'
+    api 'com.umeng.sdk:share-qq:latest.integration'
+    api 'com.umeng.sdk:share-wechat:latest.integration'
+    api 'com.umeng.sdk:share-sina:latest.integration'
+    api project(':base')
+    api files('libs/umeng-share-QQ-simplify-6.9.0.jar')
 }
