--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+static def releaseTime() {
+    return new Date().format("yyyy-MM-dd---HH-mm", TimeZone.getDefault())
+}
+
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -10,11 +14,6 @@ android {
         versionCode 2
         versionName "1.1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        externalNativeBuild {
-            cmake {
-                cppFlags ""
-            }
-        }
     }
 
     buildTypes {
@@ -27,32 +26,54 @@ android {
             // 混淆文件的位置
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
+            applicationVariants.all { variant ->
+                variant.outputs.all { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        // 输出apk名称为Xingxing_v1.0_2015-01-15_wandoujia.apk
+                        def fileName = "Shopping_v${defaultConfig.versionName}_${releaseTime()}_release.apk"
+                        outputFileName = fileName
+                    }
+                }
+            }
+
         }
 
         debug {
             manifestPlaceholders = [qqappid: "1106084810"]
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            applicationVariants.all { variant ->
+                variant.outputs.all { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        // 输出apk名称为Xingxing_v1.0_2015-01-15_wandoujia.apk
+                        def fileName = "Shopping_v${defaultConfig.versionName}_${releaseTime()}_debug.apk"
+                        outputFileName = fileName
+                    }
+                }
+            }
         }
 
     }
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
 
     defaultConfig {
         // dex突破65535的限制
         multiDexEnabled true
     }
 
-    defaultConfig {
-        ndk {
-            //设置支持的SO库架构
-            abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
-        }
-    }
+//    defaultConfig {
+//        ndk {
+//            //设置支持的SO库架构
+//            abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+//        }
+//    }
 
     lintOptions {
         abortOnError false
