--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         versionCode 2
         versionName "1.1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
 
     buildTypes {
@@ -85,6 +90,7 @@ android {
     }
 
     lintOptions {
+//        checkReleaseBuilds false
         abortOnError false
     }
 
@@ -98,4 +104,8 @@ dependencies {
     implementation project(':session')
     implementation project(':third')
     implementation 'com.android.support:support-v4:27.1.1'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
