--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,6 @@ ANNOTATION_SUPPORT_VERSION=26.+
 RECYCLER_VIEW_SUPPORT_VERSION=26.+
 CONSTRAIT_SUPPORT_VERSION=1.0.2
 
+
+android.useDeprecatedNdk=true
 #android.enableAapt2=false
